--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ body {
 }
 .creatToDoList {
     background: white;
+    min-height: 30px;
     margin: 5px 0;
     border: 1px solid #E5E5E5;
     border-radius: 15px;
